<resources>
    <string name="app_name">Toko Onlen</string>
    <string name="jello">Jello</string>
    <string name="title_jello">jello.</string>
    <string name="welcome_to_login">Welcome to Login</string>
    <string name="please_fill_e_mail_amp_password_to_login_your_app_account_sign_up"><![CDATA[Please fill E-mail & password to login your app account. Sign Up]]></string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="user_gmail_com">user@gmail.com</string>
    <string name="or">Or</string>
    <string name="create_your_account">Create your account</string>
    <string name="username">Username</string>
    <string name="do_you_already_have_account_sign_in">Do you already have account ? Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="cari">Cari Barang Kamu Disini</string>
    <string name="keranjang">keranjang</string>
    <string name="hoodie_colletion">Hoodie Colletion</string>
    <string name="hoodie_collection">Hoodie Collection</string>
    <string name="latest_shoe_recommendations_which_is_being_hit_right_now">Latest shoe recommendations which is being hit right now</string>
    <string name="get_now">Get Now</string>
    <string name="categories">Categories</string>
    <string name="see_all">See All</string>
    <string name="nmd_r1_shoes">NMD_R1 Shoes</string>
    <string name="nmd_r2_shoes">NMD_R2 Shoes</string>
    <string name="nmd_r3_shoes">NMD_R3 Shoes</string>
</resources>